[gd_scene load_steps=4 format=3 uid="uid://bjmlmrrkvorfw"]

[ext_resource type="Texture2D" uid="uid://dotr6w5stvxci" path="res://battery.png" id="1_ofqy3"]
[ext_resource type="Script" path="res://battery.gd" id="2_wivx0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xtxt2"]
size = Vector2(370, 511.667)

[node name="Battery" type="Sprite2D"]
position = Vector2(813, 788)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_ofqy3")
script = ExtResource("2_wivx0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.833374)
shape = SubResource("RectangleShape2D_xtxt2")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
